# hhuTOSuserlib

./: Cargo.toml  README.md  Requirements.md
src/: lib.rs
src/graphix/: gprint.rs  mod.rs  print_setpos.rs
src/graphix/picturepainting/: animate.rs  mod.rs  paint.rs
src/graphix/picturepainting/pictures/: crumpy_cat.rs  cute_cat.rs  doge.rs  mod.rs
src/graphix/picturepainting/pictures/blinking/: animate.rs  blinking0.rs  blinking1.rs  blinking2.rs  blinking3.rs  blinking4.rs  mod.rs
src/graphix/picturepainting/pictures/charmander/: charmander0.rs  charmander1.rs  charmander2.rs  charmander3.rs  charmander4.rs  mod.rs
src/graphix/picturepainting/pictures/ghost/: ghost00.rs  ghost01.rs  ghost02.rs  ghost03.rs  ghost04.rs  ghost05.rs  ghost06.rs  ghost07.rs  ghost08.rs  ghost09.rs  mod.rs
src/kernel/: kprint.rs  mod.rs
src/kernel/allocator/: allocator.rs  list.rs  listnode.rs  mod.rs
src/kernel/runtime/: env_variables.rs  environment.rs  mod.rs  runtime.rs
src/kernel/shell/: command_parser.rs  mod.rs  shell_handler.rs
src/kernel/syscall/: mod.rs  process_management.rs  user_api.rs  wrapper.rs
src/music/: mod.rs  note.rs  player.rs
src/time/: mod.rs  rtc_date_time.rs
src/utility/: delay.rs  mod.rs  queue.rs
src/utility/mathadditions/: complex_numbers.rs  fibonacci.rs  math.rs  mod.rs
