[package]
name = "usrlib"
version = "0.2.0"
edition = "2021"
authors = [
    "Michael Schöttner <michael.schoettner@hhu.de>",
    "Carsten Krollmann <cakro105@hhu.de>",
]

[dependencies]
spin = "0.9.8"


[features]
default = ["global-alloc", "lib-panic-handler"] # Allocator standartmäßig gesetzt
global-alloc = []
lib-panic-handler = []