[package]
name = "usrlib"
version = "0.2.1"
edition = "2021"
authors = [
    "Michael Schöttner <michael.schoettner@hhu.de>",
    "Carsten Krollmann <cakro105@hhu.de>",
]

[dependencies]
spin = "0.9.8"
hashbrown = { version = "0.14"} # , default-features = false, features = ["rustc-dep-of-std"]


[features]
default = ["global-alloc", "lib-panic-handler", "runtime"] # Defaultfeatures standartmäßig gesetzt
global-alloc = []
lib-panic-handler = []
runtime = ["global-alloc"] # Runtime braucht den allocator zum funktionieren